# logistics-service

./: README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20b7d2598a4d_initial_migration.py
app/: crud.py  database.py  main.py  models.py  schemas.py
app/routers/: orders.py  products.py
tests/: test_orders.py
