[project]
name = "logistics-service"
version = "0.1.0"
description = "The system that will manage Products and Orders."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[standard]>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.45",
]
